--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^1.12.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
