--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
+    "@rails/webpacker": "5.3.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
@@ -19,6 +19,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
+    "sass": "^1.68.0",
     "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.0"
   }
