--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,7 +7,11 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 cloudinary:
-  service: Cloudinary
+  service: cloudinary
+  cloud_name: "dhoxwyrvn"
+  api_key: "565245352138676"
+  api_secret: "wUUVVuQNg9MatV0F4DgU5kodwGI"
+  secure: true
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
